# gee_biophys

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_export.py
example_configs/: bimonthly-zambia.yaml  config_template.yaml  forest-fire-bitsch-2023.yaml  minimal_example.yaml  seasonal-summer-zurich.yaml
gee_biophys/: __init__.py  cli.py  config.py  s2_export.py  s2_input.py  s2_predict.py  utils.py  utils_predict.py
gee_biophys/models/: s2biophys.py  sl2p.py  utils_s2biophys.py
gee_biophys/models/sl2p_params/: LAI-uncertainty_SL2P_Corrected_LeafToolBox.json  fAPAR-uncertainty_SL2P_Corrected_LeafToolBox.json  fCOVER-estimation_SL2P_Corrected_LeafToolBox.json  fCOVER-uncertainty_SL2P_Corrected_LeafToolBox.json
geometries/: zurich.geojson
models/: s2biophys.py  sl2p.py
models/sl2p_params/: LAI-estimation_SL2P_Corrected_LeafToolBox.json  fAPAR-estimation_SL2P_Corrected_LeafToolBox.json
models/specker_params/fapar/: lut_optuna-v2-fapar-mlp-split-0.csv  lut_optuna-v2-fapar-mlp-split-2.csv  lut_optuna-v2-fapar-mlp-split-3.csv  lut_optuna-v2-fapar-mlp-split-4.csv  min_max_band_values_optuna-v2-fapar-mlp-split-4.json  min_max_label_values_optuna-v2-fapar-mlp-split-0.json  min_max_label_values_optuna-v2-fapar-mlp-split-1.json  model_domain_codes_optuna-v2-fapar-mlp-split-2.json  model_domain_codes_optuna-v2-fapar-mlp-split-4.json  model_optuna-v2-fapar-mlp-split-1.pkl  model_optuna-v2-fapar-mlp-split-2.pkl  (+5 more)
tests/: conftest.py  test_cli.py  test_s2biophys.py  test_sl2p.py  test_temporal_iterator.py
train_pipeline/: utilsTraining.py
(+108 files in other folders)
